<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaBebidasBackEnd">

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="636dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtcoca"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_coca" />

            <ImageView
                android:id="@+id/imgcoca"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/texto_coca"
                app:srcCompat="@drawable/coca" />

            <TextView
                android:id="@+id/txtfanta"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_fanta" />

            <ImageView
                android:id="@+id/imgfanta"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/texto_fanta"
                app:srcCompat="@drawable/fanta" />

            <TextView
                android:id="@+id/txtsprite"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_sprite" />

            <ImageView
                android:id="@+id/imgsprite"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/texto_sprite"
                app:srcCompat="@drawable/sprite"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>